<resources>
    <string name="app_name">PROYECTO_DELIVERY</string>
    <!--TITULO-->
    <string name="lblTitulo">AJ Deliverys</string>
    <!--LOGIN-->
    <string name="lblUsuario">Usuario</string>
    <string name="lblContrasenia">Contraseña</string>
    <string name="btnIniciarSesion">Iniciar Sesion</string>
    <string name="lblRegistrarse">No tienes cuenta?, Registrate</string>

    <!--REGISTRO-->
    <string name="hntNombre">Nombre completo</string>
    <string name="hntTelefono">Telefono</string>
    <string name="hntCorreo">Correo electronico</string>
    <string name="hntDireccion">Direccion</string>
    <string name="hntUsuario">Usuario</string>
    <string name="hntContraseña">Contraseña</string>
    <string name="btnRegistrar">Registrar</string>

    <!--PRINCIPAL-->
    <string name="lblPrnUsuario">Usuario</string>
    <string name="lblPrnPromociones">Promociones</string>
    <string name="lblPrnPizzas">Pizzas</string>
    <string name="lblPrnHamburguesas">Hamburguesas</string>
    <string name="lblPrnPollo">Pollo</string>
    <string name="lblPrnCuenta">Mi cuenta</string>

    <!--CUENTA-->
    <string name="lblCntPerfil">Perfil</string>
    <string name="lblCntTarjeta">Tarjeta de credito</string>
    <string name="lblCntHistorial">Historial de compras</string>
    <string name="lblCntSalir">Salir</string>


    <!--PERFIL-->
    <string name="btnPrfGuardar">Guardar</string>


    <!--TARJETA DE CREDITO-->
    <string name="hntTjtPropietario">Propietario</string>
    <string name="hntTjtNumTarjeta">Numero de tarjeta</string>
    <string name="hntTjtVencimiento">F. Vencimiento: YYMM</string>
    <string name="hntTjtCvv">CVV</string>
    <string name="btnTjtGuardar">Guardar</string>

    <!--Modificar compra de producto-->
    <string name="txtMessage">¿Desea modificar o eliminar el producto del carrito?</string>
    <string name="txtTitulo">Carrito</string>
    <string name="btnmodificar">Modificar</string>
    <string name="btnEliminar">Eliminar</string>

</resources>